# macroabm-ca-bcgov

./: .gitignore  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build_macrodata.yml  simulate_canada.yml
docs/contributing/: uml_banks_agent_demo.md  uml_central_government_agent_demo.md  uml_firms_agent_demo.md  uml_individual_agent_demo.md
docs/diagrams/: README.md  uml_central_bank_agent_demo.md  uml_government_entities_agent_demo.md  uml_households_agent_demo.md  uml_individual_agent_demo.md  uml_object_diagram.md  uml_package_diagram.md  uml_system_wide_demo.md  uml_use_case_diagram.md
docs/diagrams/pit_update/: README.md  uml_banks.md  uml_central_bank.md  uml_central_government.md  uml_country.md  uml_firms.md  uml_government_entities.md  uml_households.md  uml_individuals.md  uml_object.md  uml_package.md  uml_pit_module.md  uml_system_wide.md
docs/diagrams/upstream_model/: README.md  uml_banks.md  uml_central_bank.md  uml_central_government.md  uml_country.md  uml_firms.md  uml_government_entities.md  uml_households.md  uml_individuals.md  uml_object.md  uml_package.md  uml_system_wide.md
macro_data/processing/: synthetic_country.py
macro_data/processing/synthetic_matching/: matching_households_with_banks.py
macro_data/processing/synthetic_population/: hfcs_individual_tools.py  hfcs_synthetic_population.py
macro_data/readers/: default_readers.py
macro_data/readers/criticality_data/: goods_criticality_reader.py
macro_data/readers/emission_fraction/: emission_fraction_reader.py
macro_data/readers/exo_prices/: __init__.py  exo_prices_reader.py
macro_data/readers/io_tables/: remap_provincial_icio.py
macro_data/readers/population_data/: hfcs_reader.py
macromodel/: simulation.py
macromodel/configurations/: central_government_configuration.py  firms_configuration.py
macromodel/country/: country.py
macromodel/util/: loader.py
spoof_data/freda/: BC_PIT_2014.csv  bc_cpi_inflation.csv  pit_brackets_sample.csv  pit_schedule.xlsx
test_run/: compare_can_bc.py  ensemble_run.py  inspect_income.py  remap_provincial_icio.py  run_simulation.py  run_simulation_CAN.py  run_simulation_FRA.py  summary_and_viz.py  test_run_simulation_FRA.py
(+19 files in other folders)
