[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macromodel"
version = "1.0.0"
description = "Combined macro-data and macro-model packages for agent-based modeling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "setuptools",
    "skops",
    "statsmodels",
    "tables",
    "tqdm",
    "strenum",
    "cvxpy",
    "torch>=2.6.0,<2.7.0",
    "joblib",
    "sbi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs",
    "notebook",
    "mike",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "mistune",
    "nbconvert",
]

[tool.setuptools]
include-package-data = true
package-data = {"*" = ["*.yaml"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["macro_data*", "macromodel*", "macrocalib*"]

[tool.ruff]
line-length = 120
extend-exclude = ["debug_scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["macro_data", "macromodel"]

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore numpy matmul warnings (overflow, invalid, divide by zero)
    "ignore:overflow encountered in matmul:RuntimeWarning",
    "ignore:invalid value encountered in matmul:RuntimeWarning",
    "ignore:divide by zero encountered in matmul:RuntimeWarning",
    # Ignore osqp deprecation warning about raise_error default
    "ignore:The default value of raise_error will change:PendingDeprecationWarning",
    # Ignore sklearn version mismatch when unpickling models
    "ignore:Trying to unpickle estimator.*:sklearn.exceptions.InconsistentVersionWarning",
]